# a2ui

./: .gitignore  CODE_OF_CONDUCT.md  README.md
.github/: blunderbuss.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: python-ci.yml  semantic-pull-request.yml  web-ci.yml  zizmor.yml
agent/python/: README.md  __main__.py  agent_executor.py  pyproject.toml  setup.sh
client/android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/assets/canned_responses/: mapping.json  prompt_1.json  prompt_2.json  prompt_3.json  prompt_4.json  prompt_5.json
client/android/app/src/main/res/drawable/: rounded_corner.xml  rounded_corner_user.xml
client/android/app/src/main/res/layout/: activity_main.xml  item_loading.xml  item_maui_gmp_a2ui_view.xml  item_text.xml
client/android/app/src/main/res/mipmap/: ic_launcher.xml
client/android/app/src/main/res/values/: colors.xml  strings.xml  (+1 more)
client/ios/: .gitignore  ChatApp.swift  ChatView.swift  ChatViewModel.swift  Info.plist  Models.swift  README.md  run_xcode_ui_tests.sh
client/ios/A2UI-Example.xcodeproj/: project.pbxproj
client/ios/A2UI-ExampleUITests/: A2UI_ExampleUITests.swift
client/web/react/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/web/react/src/: App.css  App.tsx  AppMobile.tsx  custom-elements.d.ts  index.css  main.tsx
client/web/react/src/utils/: platform.ts
(+3 files in other folders)
